# Personal-event-calendar

./: CMakeLists.txt  CSVuserEvents.csv  HTMLuserEvents.html  README.md  appCoord.cpp  appCoord.h  backupfile.txt  main.cpp
Business/: Service.cpp  Service.h  UserService.cpp  UserService.h
Domain/: Entity.cpp  Entity.h
Exceptions/: Exceptions.cpp  Exceptions.h
Persistence/: CSVRepository.cpp  CSVRepository.h  FileRepository.cpp  FileRepository.h  HTMLRepository.cpp  HTMLRepository.h  STLRepository.cpp  STLRepository.h  UndoRedoRepo.cpp  UndoRedoRepo.h
Presentation/: GUI.cpp  GUI.h  TableModel.cpp  TableModel.h  UserGUI.cpp  UserGUI.h
Validation/: Validator.cpp  Validator.h
